+Can now change lexer from status bar context menu.
+Session management feature behavior has been changed in this release. When using
custom sessions they will not automatically be saved as new files are opened or
when the editor is closed. They must now be saved manually. Only the builtin
'Default' session will retain the automatic behavior.
+Support folding docstrings in Python source code.

LIBRARY:
+Add FileTree class to eclib.

BUG FIXES:
+Fix PyDeadObject error when opening new window from tab menu.
+Fix selection background not being shown when selecting whitespace when the
buffers show whitespace option is turned on.
+Fix Select All not working in search bar.
+Fix issue during shutdown when IPC server isn't running.
+Fix loading custom key profiles that have duplicate entries.
+Fix handling the toggling of Maximize/Restore editor for some workflows so that
the view is correctly toggled back and forth for all cases.
+Fix display issues when scrolling on GTK caused by overlay scrollbars.
+Fix issue with some obsolete plugins being shown in plugin manager download window.

#-----------------------------------------------------------------------------#

VERSION 0.6.58
DATE 07/23/2011
44th Alpha Release

NEWS:

NEW: [features/improvements]
+Updated all translations from launchpad site
+Add right click menu to Shelf tab area to open Shelf items.
+UI Display font setting is now more uniformly applied across the interface.
+Use more understated style for brace matching in default style.

LIBRARY:
+Fix PlateButton size being incorrectly calculated on GTK.

BUG FIXES:
+Fix crash in handling corrupt style sheet data
+Fix frame title not updating correctly when only one tab is open on Linux.
+Partial fix for screen flashing issue on Linux when using dark syntax
highlighting themes. Need to turn off code folding to stop the flashing.
+Fix tab context menu option for Close and Close All not working on Linux.
+Fix minor defect in OSX document icon (patch from auria)