@@ -207,6 +207,7 @@ ART = { ed_glob.ID_ABOUT  : u'about.png',
         ed_glob.ID_COMPUTER : u'computer.png',
         ed_glob.ID_CUT    : u'cut.png',
         ed_glob.ID_DELETE : u'delete.png',
+        ed_glob.ID_DELETE_ALL : u'delete_all.png',
         ed_glob.ID_DOCPROP : u'doc_props.png',
         ed_glob.ID_DOCUMENTATION : u'docs.png',
         ed_glob.ID_DOWN   : u'down.png',
